...
    "Cloud Synchronization" : {

    },
    "Done" : {

    },
    "English" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "English"
          }
...
    "ابحث في القرآن الكريم..." : {

    },
    "اختر السورة لتسجيلها كاملة:" : {

    },
    "اختر القارئ أو الراوي" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Choose a Reader or Narrator"
          }
...
        }
      }
    },
    "اسم السورة" : {

    },
    "الآلية" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Automation"
          }
...
            "state" : "machine_translated",
            "value" : "Surah"
          }
        }
      }
    },
    "الشخصية" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "Personal"
          }
...
